pkg/website/js/app.css
html, body { margin: 0; padding: 0; }

body {
  font-family: sans-serif;
  font-size: 18px;
  line-height: 1.4;
}

/* Header stuff */
h1 {
  text-align: center;
  margin-bottom: 0;
}
h3 { margin-bottom: 0; }
.hero {
  font-size: 20px;
  text-align: center;
  padding: 20px;
  margin: 0;
  border-bottom: 1px solid #ddd;
}
.logo {
  color: #111;
  font-size: 30px;
  font-family: courier;
}
.logo strong {
  margin-left: 5px;
}
.link-button,
.button {
  padding: 10px 15px 7px;
  background: #f1f9ff;
  border-radius: 13px;
}
.link-button { margin: 0 5px; }
.try-online.link-button {
  background: #c0efe4;
  color: #238961;
}
.content {
  margin: 10px auto;
  padding: 0 15px;
  width: 1000px;
}
input {
  font-family: sans-serif;
  font-size: 14px;
  border-radius: 3px;
  border: 1px solid #AAA;
  padding: 4px;
}
input[disabled] {
  background: #f7f7f7;
  border-color: #f7f7f7;
  color: #666;
}
li code,
p code {
  background: #f1f1f1;
  border-radius: 4px;
  border: 1px solid #eee;
  padding: 2px 4px;
  font-size: 80%;
}
a:visited, a, a:hover {
  color: #00c;
}
a {
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
.button {
  border: none;
  border-radius: 3px;
  color: blue;
  padding: 5px 10px;
  margin: 0;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 13px;
  cursor: pointer;
}
.button:hover { text-decoration: underline; }
.terminal {
  background: #000;
  color: #eee;
  font-size: 80%;
  padding: 7px 9px;
  border-radius: 4px;
  border-bottom: 1px solid #ddd;
  overflow-x: auto;
}
.green { color: #618402; }
.red { color: red; }
.gray { color: #777; }
code, .terminal, .logo {
  font-family: Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;
}

/* k14s tools */
#k14s-tools {
  margin: 0 auto;
  width: 1000px;
  border-bottom: 1px solid #ddd;
}
#k14s-tools p {
  color: #777;
  margin: 0;
  font-size: 80%;
  padding: 5px 0;
}
#k14s-tools p a { color: #111; }

/* Intro */
#intro {
  clear: both;
}
.tools a { font-weight: bold; }

#footer { text-align: center; }

